<resources>
    <string name="app_name">Running App</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
    <string name="google_maps_key">AIzaSyDgWM3n7K7XK9F8bEwSAQm1cY-B2S1Z_ek</string>
    <string name="start">Start</string>
    <string name="finish_run">Finish Run</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="let_s_go_prakash">Let\'s go, Prakash!</string>
    <string name="sort_by">Sort by</string>
    <string name="welcome_n_please_enter_your_name_and_weight">Welcome!\nPlease enter your name and weight.</string>
    <string name="your_name">Your Name</string>
    <string name="your_weight">Your Weight</string>

    <string name="apply_changes">Apply Changes</string>
</resources>