<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/clip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dummy2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Information"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2" />

    <TextView
        android:id="@+id/dummy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="You can Edit these feilds anytime"
        android:textColor="@color/colorTextSecondary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/dummy2"
        app:layout_constraintEnd_toEndOf="@+id/dummy2"
        app:layout_constraintStart_toStartOf="@+id/dummy2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@id/dummy"
        app:layout_constraintRight_toRightOf="@id/dummy"
        app:layout_constraintTop_toBottomOf="@id/dummy"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/your_name"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="@id/tilName"
        app:layout_constraintRight_toRightOf="@id/tilName"
        app:layout_constraintTop_toBottomOf="@id/tilName"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/your_weight"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnApplyChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/backgroud_button"
        android:padding="20dp"
        android:textStyle="bold"
        android:text="@string/apply_changes"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/tilWeight"
        app:layout_constraintStart_toStartOf="@+id/tilWeight"
        app:layout_constraintTop_toBottomOf="@+id/tilWeight" />



</androidx.constraintlayout.widget.ConstraintLayout>